start converting SettingManager usage in randomizers etc. to new syntax